--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,13 @@
   margin: 0 auto;
 }
 
+.centering {
+  width: 100%;
+  padding-left: auto;
+  padding-right: auto;
+  display: inline-block;
+}
+
 
 .techno-button {
   background-color: #d65a31;
@@ -129,6 +136,8 @@
 
 .pricing-column {
   padding: 3% 2%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 header {
