--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
   background-color: #eeeeee;
   text-align: center;
   color: #222831;
-  padding: 60px 0 60px 0;
+  padding: 260px 0 60px 0;
 }
 
 #hand {
@@ -22,6 +22,12 @@
   margin-left: auto;
   margin-right: auto;
   text-align: center;
+}
+
+#header {
+  position: fixed;
+  width: 100%;
+  z-index: 1;
 }
 
 #header-img {
@@ -40,7 +46,7 @@
   text-align: center;
 }
 
-#video {
+#theVideo {
   display: block;
   text-align: center;
   width: 100%;
